--- a/css/textPreview.css
+++ b/css/textPreview.css
@@ -1,6 +1,12 @@
 body{
     
-    background-color: lightblue;
+    background-color: #f2f2f2;
+    
+}
+
+h1{
+    
+    margin: 5%;
     
 }
 
@@ -13,7 +19,9 @@ body{
     padding-bottom: 0%;
     margin-left: 5%;
     margin-right: 5%;
-    background-color: lightgray;
+    background-color: white;
+    box-shadow: 0px 2px 10px darkgray;
+    overflow: auto;
     
 }
 
@@ -23,5 +31,15 @@ body{
     margin: 5%;
     align-items: center;
     height: 15%;
+    justify-content: space-around;
     
+}
+
+#circle {
+    border-radius: 100px;
+    background: white;
+    padding: 20px;
+    width: 100px;
+    height: 100px;
+
 }
