--- a/views/home.html
+++ b/views/home.html
@@ -4,6 +4,11 @@
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Bootstrap 3: Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+  <!-- custom CSS -->
   <link rel="stylesheet" href="../style/home.css">
 </head>
 
@@ -22,9 +27,6 @@
     </div>
     <div>3</div>  
   </div>
-
-
-
 
   <div class="topnav">
     <a class="active" href="#home">Home</a>
