--- a/views/home.html
+++ b/views/home.html
@@ -13,26 +13,25 @@
 </head>
 
 <body>
-  <h1>Flexible Boxes</h1>
 
-  <div class="flex-container">
-    <div class="hamburger">
-    	<!-- hamburgur menu -->
-  	<div></div>
-  	<div></div>
-  	<div></div>
-    </div>
-    <div>
-    	<p>Home</p>
-    </div>
-    <div>3</div>  
-  </div>
+    <!-- bootstrap navbar -->
+    <nav class="navbar navbar-inverse navbar-fixed-top text-uppercase">
+      <div class="container-fluid">
 
-  <div class="topnav">
-    <a class="active" href="#home">Home</a>
-    <a href="#news">News</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle pull-left" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span> 
+          </button>
+          <p class="navbar-text navbar-right">Forever Note</p>
+        </div>
+
+      </div>
+    </nav>
+
+  <div class="container-fluid nav-anchor">
+    <h1> hello world</h1>
   </div>
 
 </body>
