--- a/views/home.html
+++ b/views/home.html
@@ -24,7 +24,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span> 
           </button>
-          <p class="navbar-text navbar-right">Forever Note</p>
+          <p class="navbar-text navbar-right text-white text-center">Forever Note</p>
         </div>
 
       </div>
