--- a/views/home.html
+++ b/views/home.html
@@ -19,12 +19,21 @@
       <div class="container-fluid">
 
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle pull-left" data-toggle="collapse" data-target="#myNavbar">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span> 
-          </button>
-          <p class="navbar-text navbar-right text-white text-center">Forever Note</p>
+          <div class="row">
+            <div class="col-xs-2">
+              <button type="button" class="navbar-toggle pull-left" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span> 
+              </button>
+            </div>
+            <div class="col-xs-8">            
+              <p class="navbar-text navbar-right text-white text-center">Forever Note</p>
+            </div>
+            <div class="col-xs-2">
+              
+            </div>
+          </div>
         </div>
 
       </div>
