add copied css, playing with innerHTML in js

--- a/views/homeBody.html
+++ b/views/homeBody.html
@@ -16,8 +16,8 @@
                 var notes=['note1','note2','note3'];
                 function appendContainer(){
                     var div = document.createElement("div");
-                    div.innerHTML = "Text.";
-                    div.className = "";
+                    div.innerHTML = "<h4>Title</h4>";
+                    div.className = "card";
                     $("body").append(div);
                 }
                 //window.onload = appendContainer;
