--- a/views/home.html
+++ b/views/home.html
@@ -10,12 +10,15 @@
 
   <!-- custom CSS -->
   <link rel="stylesheet" href="../style/home.css">
+
+  <!-- glyphicons -->
+  <!-- http://www.glyphicons.com/ -->
 </head>
 
 <body>
 
     <!-- bootstrap navbar -->
-    <nav class="navbar navbar-inverse navbar-fixed-top text-uppercase">
+    <nav class="navbar  navbar-fixed-top text-uppercase">
       <div class="container-fluid">
 
         <div class="navbar-header">
@@ -26,12 +29,18 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span> 
               </button>
+
+              <!-- Collapse button -->
+                 <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1"
+                     aria-expanded="false" aria-label="Toggle navigation"><span class="dark-blue-text"><i class="fa fa-bars fa-1x"></i></span></button>
+
+
             </div>
             <div class="col-xs-8">            
-              <p class="navbar-text navbar-right text-white text-center">Forever Note</p>
+              <p class="navbar-text navbar-right text-center">Forever Note</p>
             </div>
             <div class="col-xs-2">
-              
+              <span class="glyphicon glyphicon-search"></span>
             </div>
           </div>
         </div>
