fix merge conflict, link home and note-viewer to same css file

--- a/views/home.html
+++ b/views/home.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
   <!-- custom CSS -->
-  <link rel="stylesheet" href="../style/home.css">
+  <link rel="stylesheet" href="../style/navbar.css">
 
   <!-- glyphicons -->
   <!-- http://www.glyphicons.com/ -->
@@ -23,21 +23,7 @@
         <div class="navbar-header">
           <div class="row">
             <div class="col-xs-2">
-<<<<<<< HEAD
-              <button type="button" class="navbar-toggle pull-left" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span> 
-              </button>
-
-              <!-- Collapse button -->
-                 <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1"
-                     aria-expanded="false" aria-label="Toggle navigation"><span class="dark-blue-text"><i class="fa fa-bars fa-1x"></i></span></button>
-
-
-=======
               <span class="glyphicon glyphicon-menu-hamburger"></span>
->>>>>>> make navbar dark blue
             </div>
             <div class="col-xs-8">            
               <p class="navbar-text navbar-right text-center">Forever Note</p>
