--- a/style/homeBody.css
+++ b/style/homeBody.css
@@ -46,6 +46,15 @@ input:focus{
     outline: none;
 }
 
+.panel-default{
+    background-color: green;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-bottom: 0%;
+    margin-top: 1%;
+    box-shadow: 0px 0px;
+}
+
 #circle {
     border-radius: 100px;
     background: white;
