--- a/views/home.html
+++ b/views/home.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
   <!-- custom CSS -->
-  <link rel="stylesheet" href="../style/navbar.css">
+  <link rel="stylesheet" href="../style/home.css">
 
   <!-- glyphicons -->
   <!-- http://www.glyphicons.com/ -->
