--- a/views/note-viewer.html
+++ b/views/note-viewer.html
@@ -39,15 +39,9 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-xs-2">
-        <div class="flex">
+      <div class="col-xs-12">
           <span class="dot"></span>
-        </div>
-      </div>
-      <div class="col-xs-10">
-          <h1 class="text-center">Notes - Greek Archeology</h1>
-        <div class="flex">
-        </div>
+          <span><strong>Notes - Greek Archeology</strong></span>
       </div>
     </div>
 
