--- a/views/index.html
+++ b/views/index.html
@@ -2,13 +2,18 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>E-Notes</title>
+	<title>bitnote</title>
 </head>
 <body>
-	<h1>HELLO WORLD!</h1>
+	<h1>bitnote</h1>
+	<div>
+		<ul id="note-list"></ul>
+	</div>
 	<form action="/handwritten" method="POST" enctype="multipart/form-data">
 		<input type="file" name="handwritten_image" accept="image/*" />
 		<input type="submit" value="Upload Image" />
 	</form>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="/js/homeController.js"></script>
 </body>
 </html>
