--- a/views/note-viewer.html
+++ b/views/note-viewer.html
@@ -5,8 +5,8 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Bootstrap 3: Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <!-- Bootstrap 4: Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="../asset/icons/Font-Awesome">
 
   <!-- custom CSS -->
   <link rel="stylesheet" href="../style/note-viewer-and-preview.css">
@@ -20,15 +20,15 @@
 
         <div class="navbar-header">
           <div class="row">
-            <div class="col-xs-2">
+            <div class="col-xs-3">
               <a href="home.html">
-                <span class="glyphicon glyphicon-chevron-left"></span>
+                <img src="../asset/icons/icon-assets-svg/arrow-back-black.svg">
               </a>
             </div>
-            <div class="col-xs-8">            
+            <div class="col-xs-6">            
               <p class="navbar-text navbar-right text-center">Forever Note</p>
             </div>
-            <div class="col-xs-2">
+            <div class="col-xs-3">
               <p class="navbar-text navbar-right text-center" id="date">DATE</p>
             </div>
           </div>
@@ -39,9 +39,9 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-xs-12 text-center">
           <span class="dot"></span>
-          <span><strong>Notes - Greek Archeology</strong></span>
+          <span>Notes - Greek Archeology</span>
       </div>
     </div>
 
@@ -53,6 +53,8 @@
 
 </p>
   </div>
-
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
