--- a/views/note-viewer.html
+++ b/views/note-viewer.html
@@ -20,15 +20,15 @@
 
         <div class="navbar-header">
           <div class="row">
-            <div class="col-xs-3">
+            <div class="col-4">
               <a href="home.html">
                 <img src="../asset/icons/icon-assets-svg/arrow-back-black.svg">
               </a>
             </div>
-            <div class="col-xs-6">            
+            <div class="col-5">            
               <p class="navbar-text navbar-right text-center">Forever Note</p>
             </div>
-            <div class="col-xs-3">
+            <div class="col-4">
               <p class="navbar-text navbar-right text-center" id="date">DATE</p>
             </div>
           </div>
@@ -39,7 +39,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 text-center">
+      <div class="col-12 text-center">
           <span class="dot"></span>
           <span>Notes - Greek Archeology</span>
       </div>
