add functionality of button

--- a/views/note-viewer.html
+++ b/views/note-viewer.html
@@ -63,9 +63,18 @@
 
   <script>
     window.onload = $("#img_note").hide();
+    var noteIsText = false;
     $("#swap").click(function(){
-      console.log("hello world!");
-    });
+      if (noteIsText) {
+        $("#text_note").hide();
+        $("#img_note").show();
+      }
+      else {
+        $("#text_note").show();
+        $("#img_note").hide();
+      }
+      noteIsText = !noteIsText;
+      });
   </script>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
