--- a/style/note-viewer-and-preview.css
+++ b/style/note-viewer-and-preview.css
@@ -15,7 +15,20 @@ img {
 .navbar {
 	border-top: 16px solid #1C3D57;
 }
-
+#cam__button {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    border: none;
+    font-size: 30px;
+    background-color: darkslategrey;
+    color: white;
+    outline: none;
+    box-shadow: #999999 0 6px 6px;
+}
 .navbar-fixed-top .container-fluid {
 	background-color: white; 
 }
