--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,11 @@ a:hover {
     border-bottom: 0.5px solid lightgray;
 }
 
+.cam__img {
+    height: 30px;
+    width: auto;
+}
+
 h1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 14px;
@@ -102,6 +107,9 @@ p {
     color: white;
     outline: none;
     box-shadow: #999999 0 6px 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
  }
 
  #cam__button:hover {
