--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
 		<ul id="note-list"></ul>
 	</div>
 	<form action="/handwritten" method="POST" enctype="multipart/form-data">
-		<input type="file" name="handwritten_image" accept="image/*" />
+		<input type="file" name="handwritten_image" accept="image/*" capture />
 		<input type="submit" value="Upload Image" />
 	</form>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
