updated swap img button

--- a/views/note-viewer.html
+++ b/views/note-viewer.html
@@ -59,7 +59,7 @@
     <img id="img_note" src="../asset/images/stars.jpg"
   </div>
 
-  <button id="swap_button" type="button">swap text and image</button>
+  <a id="swap_button" type="button"><img src="../asset/icons/switch-icon.png" alt="" id="switch-icon"></a>
 
   <script>
     window.onload = $("#img_note").hide();
