--- a/style/note-viewer-and-preview.css
+++ b/style/note-viewer-and-preview.css
@@ -15,7 +15,7 @@ img {
 .navbar {
 	border-top: 16px solid #1C3D57;
 }
-#cam__button {
+#swap_button {
     position: fixed;
     bottom: 30px;
     right: 30px;
@@ -27,8 +27,18 @@ img {
     background-color: darkslategrey;
     color: white;
     outline: none;
-    box-shadow: #999999 0 6px 6px;
+	box-shadow: #999999 0 6px 6px;
+	
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
+
+#switch-icon {
+	height: 24px;
+	width: auto;
+}
+
 .navbar-fixed-top .container-fluid {
 	background-color: white; 
 }
