--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,10 @@ a:hover {
 .note__box {
     border-bottom: 0.5px solid lightgray;
 }
+.cam__img {	
+    height: 30px;	
+    width: auto;	
+}	
 
 h1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -58,7 +62,10 @@ p {
 
 .overview__header {
     font-size: 14px;
-    margin-bottom: 0;
+    margin-bottom: 0;    display: flex;	
+    justify-content: center;	
+    align-items: center;
+    
 }
 
 .overview__month {
@@ -103,6 +110,9 @@ p {
     color: white;
     outline: none;
     box-shadow: #999999 0 6px 6px;
+    display: flex;	
+    justify-content: center;	
+    align-items: center;	
  }
 
  #cam__button:hover {
