added script for swap button

--- a/views/home1.html
+++ b/views/home1.html
@@ -42,9 +42,23 @@
                 </div> 
             </div>
       </div>
-      <input type="button" value="+" id="cam__button">
-      
+  <a id="swap_button" type="button"><img src="../asset/icons/switch-icon.png" alt="" id="switch-icon"></a>
 
+  <script>
+    window.onload = $("#img_note").hide();
+    var noteIsText = false;
+    $("#swap_button").click(function(){
+      if (noteIsText) {
+        $("#text_note").hide();
+        $("#img_note").show();
+      }
+      else {
+        $("#text_note").show();
+        $("#img_note").hide();
+      }
+      noteIsText = !noteIsText;
+      });
+  </script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
