Adds text reporting and text replacement

--- a/views/conversion-result.html
+++ b/views/conversion-result.html
@@ -8,16 +8,20 @@
 </head>
 <body>
 <div class="floatingText">
-	<p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis magna leo, sodales at nunc at, efficitur pulvinar risus. Vivamus a diam mattis, gravida tortor vel, sodales eros. Donec vitae purus tortor. Praesent mauris nisl, porta et aliquam eget, varius vitae dui. Donec blandit quam purus, dapibus eleifend lacus posuere quis. Donec convallis, eros eu facilisis aliquam, urna neque ornare justo, sed hendrerit eros leo sit amet est. Vivamus fermentum mauris aliquam, dignissim massa sit amet, faucibus felis. Integer porta nec ante ut mollis. Nulla condimentum quis tortor in placerat.
-	</p>
-
+	<pre id="transcript__p"></pre>
 </div>
 <div class="buttonBar">
 	<input type="button" name="back" value="Back" id="circle"/>
 	<input type="button" name="cancel" value="Cancel" id="circle"/>
 	<input type="submit" id="circle">
 </div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="/js/conversionResultController.js"></script>
+<script src="/js/textSubstitution.js"></script>
+
 </body>
 
 
