--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
 <div class="container_fluid">
 	<nav class="navbar d-flex flex-between align-items-center">
 		<a href="#"><img src="/images/icons/menu-white.png" alt="#" id="burger__menu"></a>
-		<h2>bitnotes</h2>
+		<h2>bitnote</h2>
 		<a href="#"><img src="/images/icons/search-icon.png" alt="#" id="search__icon"></a>
 	</nav>
 </div>
