Sets the home page to prgrammatically populate, and take user to conversion result once clicked

--- a/views/conversion-result.html
+++ b/views/conversion-result.html
@@ -11,9 +11,8 @@
 	<pre id="transcript__p"></pre>
 </div>
 <div class="buttonBar">
-	<input type="button" name="back" value="Back" id="circle"/>
-	<input type="button" name="cancel" value="Cancel" id="circle"/>
-	<input type="submit" id="circle">
+	<input type="button" name="back" value="Back" id="circle" onclick="location.href='/'"/>
+	<input type="button" name="ok" value="OK" id="circle" onclick="location.href='/'"/>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
