--- a/views/index.html
+++ b/views/index.html
@@ -19,57 +19,13 @@
 		<a href="#"><img src="/images/icons/search-icon.png" alt="#" id="search__icon"></a>
 	</nav>
 </div>
-<div class="container">
-</div>
 <div> <!-- overview header -->
 	<div class="col-10">
 		<h1 class="overview__header">All Notes</h1>
 		<h1 class="overview__month">September 2018</h1>
 	</div>
 </div>
-<a href="#">
-	<div class="test">
-		<div class="col-1"></div>
-		<div class="col-10 d-flex note__box">
-			<div class="px-2 pt-1">
-				<div class="dot"></div>
-			</div>
-			<div class="d-flex flex-column">
-				<h1>Note 1 - Greek Archaeology</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt...</p>
-			</div>
-		</div> <!-- note__box -->
-	</div>
-</a>
-<a href="#">
-	<div class="test2">
-		<div class="col-1"></div>
-		<div class="col-10 d-flex align-items-baseline note__box">
-			<div class="px-2 pt-1">
-				<div class="dot dot-color-1"></div>
-			</div>
-			<div class="d-flex flex-column">
-				<h1>Mathematics - Week 2</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt...</p>
-			</div>
-		</div>
-	</div>
-</a>
-<a href="#">
-	<div class="test">
-		<div class="col-1"></div>
-		<div class="col-10 d-flex align-items-baseline note__box">
-			<div class="px-2 pt-1">
-				<div class="dot dot-color-2"></div>
-			</div>
-			<div class="d-flex flex-column">
-				<h1>Tennis - Week 1</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt...</p>
-			</div>
-		</div>
-	</div>
-</a>
-</div>
+<div class="notes"></div>
 <a id="cam__button"><img src="/images/icons/camera-icon-white.png" alt="" class="cam__img"></a>
 
 <form id="cam__form" action="/handwritten" method="POST" enctype="multipart/form-data">
